docs: add documentation for Update Cattles
